--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ WTForms==3.0.1
 Flask_WTF==1.2.1
 Werkzeug==3.0.0
 Flask==2.3.2
-flask_sqlalchemy==3.1.1
-SQLAlchemy==2.0.25
+gunicorn==23.0.0
+psycopg2-binary==2.9.10
