--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,11 @@
-﻿attrs==24.3.0
-beautifulsoup4==4.12.3
-blinker==1.9.0
+﻿
 Bootstrap-Flask==2.2.0
-bs4==0.0.2
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cycler==0.12.1
 Flask==2.3.2
 Flask-CKEditor==0.4.6
 Flask-Gravatar==0.5.0
 Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
-fonttools==4.56.0
-greenlet==3.1.1
-gunicorn==23.0.0
-h11==0.14.0
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-numpy==2.2.3
-outcome==1.3.0.post0
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-psycopg2-binary==2.9.10
-pycparser==2.22
-pyparsing==3.2.1
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-requests==2.31.0
-selenium==4.27.1
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.6
-SQLAlchemy==2.0.25
-trio==0.28.0
-trio-websocket==0.11.1
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-websocket-client==1.8.0
 Werkzeug==3.0.0
-wsproto==1.2.0
 WTForms==3.0.1
 dotenv==0.9.9
+twilio==9.4.6
