--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,6 @@ six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
-SQLAlchemy==2.0.25
 trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
@@ -53,5 +52,4 @@ websocket-client==1.8.0
 Werkzeug==3.0.0
 wsproto==1.2.0
 WTForms==3.0.1
-dotenv==0.9.9
-twilio==9.4.6
+python-dotenv==0.21.1
